src/z80asm/z80asm2/t/20-preproc/expected/defvars_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/defvars_01.asm...
t/20-preproc/input/defvars_01.asm:1:8: error: Expected origin after DEFVARS
    defvars
           ^
# file: t/20-preproc/input/defvars_01.asm
EndOfLine	"\n"	2:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
symbol	__FLOAT_GENMATH__	1	(defined at )
